@@ -1,9 +1,6 @@
 package com.main.omniplanner.EventTests;
 
-import com.main.omniplanner.user.GenericEvent;
-import com.main.omniplanner.user.EventController;
-import com.main.omniplanner.user.EventService;
-import com.main.omniplanner.user.UserRepository;
+import com.main.omniplanner.user.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -17,8 +14,7 @@ import java.util.List;
 import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 class EventControllerTest {
 
@@ -68,14 +64,17 @@ class EventControllerTest {
     @Test
     void testGetEventsByUserId_Success() {
         List<GenericEvent> events = Arrays.asList(event1, event2);
-        when(userRepository.getIdByToken(token)).thenReturn(1);
+        UserCalendarInfo userCalendarInfo = new UserCalendarInfo();
+        userCalendarInfo.setId(1);
+        userCalendarInfo.setGoogleCalendarLinked(false);
+
+        when(userRepository.findUserCalendarInfoByToken(token)).thenReturn(userCalendarInfo);
         when(eventService.getEventsByUserId(1)).thenReturn(events);
         ResponseEntity<List<GenericEvent>> response = eventController.getEventsByUserId(token);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(2, Objects.requireNonNull(response.getBody()).size());
 
-        // Assert for the first event
         assertEquals("Meeting 1", response.getBody().get(0).getDescription());
         assertEquals("2023-10-01", response.getBody().get(0).getEvent_date());
         assertEquals("10:00:00", response.getBody().get(0).getEvent_time());
@@ -85,8 +84,7 @@ class EventControllerTest {
         assertEquals("Event 1", response.getBody().get(0).getTitle());
         assertEquals(1, response.getBody().get(0).getUserId());
         assertEquals("Work", response.getBody().get(0).getEvent_type());
-       
-        // Assert for the second event
+
         assertEquals("Meeting 2", response.getBody().get(1).getDescription());
         assertEquals("2023-10-02", response.getBody().get(1).getEvent_date());
         assertEquals("11:00:00", response.getBody().get(1).getEvent_time());
@@ -97,29 +95,30 @@ class EventControllerTest {
         assertEquals("Event 2", response.getBody().get(1).getTitle());
         assertEquals(1, response.getBody().get(1).getUserId());
         assertEquals("Work", response.getBody().get(1).getEvent_type());
-    }
 
+    }
     @Test
     void testGetEventsByUserId_EmptyList() {
-        Integer userId = 2;
-        when(userRepository.getIdByToken(token)).thenReturn(1);
-        when(eventService.getEventsByUserId(userId)).thenReturn(Arrays.asList());
-        ResponseEntity<List<GenericEvent>> response = eventController.getEventsByUserId(token);
+        int userId = 1;
+        UserCalendarInfo userCalendarInfo = new UserCalendarInfo();
+        userCalendarInfo.setId(userId);
+        userCalendarInfo.setGoogleCalendarLinked(false);
 
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(0, response.getBody().size());
-    }
-
-    @Test
-    void testGetEventsByUserId_NonExistingUser() {
-        Integer userId = 999;
-        when(userRepository.getIdByToken(token)).thenReturn(1);
+        when(userRepository.findUserCalendarInfoByToken(token)).thenReturn(userCalendarInfo);
         when(eventService.getEventsByUserId(userId)).thenReturn(List.of());
         ResponseEntity<List<GenericEvent>> response = eventController.getEventsByUserId(token);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(0, response.getBody().size());
+        assertEquals(0, Objects.requireNonNull(response.getBody()).size());
     }
+
+    @Test
+    void testGetEventsByUserId_NonExistingUser() {
+        when(userRepository.findUserCalendarInfoByToken(token)).thenReturn(null);
+        ResponseEntity<List<GenericEvent>> response = eventController.getEventsByUserId(token);
+        assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
+        assertNull(response.getBody());
+        }
 
     @Test
     void testGetEventsByType_Success() {
@@ -158,11 +157,11 @@ class EventControllerTest {
     @Test
     void testGetEventsByType_EmptyList() {
         when(userRepository.getIdByToken(token)).thenReturn(2);
-        when(eventService.getEventsByType("Work", 2)).thenReturn(Arrays.asList());
+        when(eventService.getEventsByType("Work", 2)).thenReturn(List.of());
         ResponseEntity<List<GenericEvent>> response = eventController.getEventsByType(token, "Work");
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(0, response.getBody().size());
+        assertEquals(0, Objects.requireNonNull(response.getBody()).size());
     }
 
     @Test
@@ -173,18 +172,30 @@ class EventControllerTest {
         ResponseEntity<List<GenericEvent>> response = eventController.getEventsByType(token, "Work");
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(0, response.getBody().size());
+        assertEquals(0, Objects.requireNonNull(response.getBody()).size());
     }
 
     @Test
     void testAddEvent_Success() {
-        List<GenericEvent> events = Arrays.asList(event1);
-        when(userRepository.getIdByToken(token)).thenReturn(1);
+        GenericEvent event1 = new GenericEvent();
+        event1.setId(1);
+        event1.setTitle("Event 1");
+        List<GenericEvent> events = List.of(event1);
+
+        UserCalendarInfo userCalendarInfo = new UserCalendarInfo();
+        userCalendarInfo.setId(1);
+        userCalendarInfo.setGoogleCalendarLinked(false);
+
+        // Configure mocks
+        when(userRepository.findUserCalendarInfoByToken(token)).thenReturn(userCalendarInfo);
         when(eventService.getEventsByUserId(1)).thenReturn(events);
+
         ResponseEntity<List<GenericEvent>> response = eventController.getEventsByUserId(token);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, Objects.requireNonNull(response.getBody()).get(0).getId());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+        assertEquals(1, response.getBody().get(0).getId());
         assertEquals("Event 1", response.getBody().get(0).getTitle());
     }
 }
